--- a/cr7.html
+++ b/cr7.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <title>Cristiano Ronaldo vs Lionel Messi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cr7.css">
   </head>
- 
-
   <body>
-   <div>
-
-<img class="pitch" alt="cr7" src="https://img.freepik.com/premium-vector/3d-football-field-soccer-field-championship-soccer-vector_689336-832.jpg">
+<img class="pitch" alt="cr7" src="https://png.pngtree.com/png-vector/20231201/ourmid/pngtree-white-background-hosts-table-top-football-pitch-football-concept-type-png-image_10798144.png">
    <img class="goal" alt="goal" src="https://pngimg.com/d/football_goal_PNG19.png">
    <img class="goal2" alt="goal" src="https://pngimg.com/d/football_goal_PNG19.png">
    <img class="cr7-moving" alt="cr7" src="https://www.transparentpng.com/download/cristiano-ronaldo/ZQycU3-cristiano-ronaldo-transparent-picture.png">
@@ -23,7 +19,6 @@
    <img class="messi-stand" alt="messi" src="https://www.pngfind.com/pngs/b/45-451791_free-png-download-lionel-messi-png-images-background.png">
    <img class="messi" alt="messi" src="https://www.pngfind.com/pngs/b/45-451791_free-png-download-lionel-messi-png-images-background.png">
   
-  </div>
     <p class="tit">Cristiano Ronaldo vs Lionel Messi </p>
     <p class="speed1">Speed: </p>
     <input label="" title="a" placeholder="" class="speedinput">
@@ -41,5 +36,4 @@
     </div>
     <script src="cr7.js"></script>
 </body>
-
 </html>
