--- a/cr7.html
+++ b/cr7.html
@@ -26,15 +26,14 @@
      <p class="speed2">x</p>
      <button class="goon">КОНЧИТЬ</button>
      <button class="siu">SIUUUU</button>
-     <audio src="orgasm-active.mp3" class="orgasm" preload="auto"></audio>
-     <audio src="ronaldo-siuuuu.mp3" class="siuu" preload="auto"></audio>
-     <audio src="football-fans-chanting.mp3" class="tribune2" preload="áuto">ronaldo</audio>
-     <audio src="the-sound-of-a-cheering-crowd-of-fans.mp3" class="tribune" preload="áuto">ronaldo</audio>
+     <audio src="orgasm-active.mp3" class="orgasm" preload="auto" type="audio/mpeg"></audio>
+     <audio src="b4c9fa6c4690507.mp3" class="cum" preload="auto" type="audio/mpeg"></audio>
+     <audio src="ronaldo-siuuuu.mp3" class="siuu" preload="auto" type="audio/mpeg"></audio>
+     <audio src="football-fans-chanting.mp3" class="tribune2" preload="auto" type="audio/mpeg"></audio>
+     <audio src="the-sound-of-a-cheering-crowd-of-fans.mp3" class="tribune" preload="auto" type="audio/mpeg"></audio>
     <div class="box">
 <button class="go">GO</button>
     </div>
     <script src="cr7.js"></script>
 </body>
 </html>
-
-
